fix contact modal margin on small screens

--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -2905,6 +2905,7 @@ button[data-balloon] {
   /* CONTACT MODAL */
 
   .contact-form-bottom {
+    margin-bottom: 20px;
     align-items: stretch;
   }
 
